--- a/.github/workflows/trigger_resuable_workflow.yml
+++ b/.github/workflows/trigger_resuable_workflow.yml
@@ -29,7 +29,7 @@ jobs:
             github.event.pull_request.merged
             && github.base_ref == 'main'
             && !startsWith(github.head_ref, 'port/')
-        uses: ./.github/workflows/trigger-reusable-workflow
+        uses: ./.github/workflows/trigger-reusable-workflow.yml
         with:
             inputs: |
                 {
@@ -42,7 +42,7 @@ jobs:
             github.event.pull_request.merged
             && github.base_ref == 'develop'
             && startsWith(github.head_ref, 'port/')
-        uses: ./.github/workflows/trigger-reusable-workflow
+        uses: ./.github/workflows/trigger-reusable-workflow.yml
         with:
             inputs: |
                 {
@@ -56,7 +56,7 @@ jobs:
             || startsWith(github.base_ref, 'release/')
             || startsWith(github.base_ref, 'project/')
             || startsWith(github.base_ref, 'hotfix/'))
-        uses: ./.github/workflows/trigger-reusable-workflow
+        uses: ./.github/workflows/trigger-reusable-workflow.yml
         with:
             inputs: |
                 {
