--- a/.github/workflows/trigger_resuable_workflow.yml
+++ b/.github/workflows/trigger_resuable_workflow.yml
@@ -6,6 +6,11 @@ on:
             - closed
 
 jobs:
+    checkout:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+
     get_versions:
         runs-on: ubuntu-latest
         outputs:
